fix disclaimer text align to center

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ SVG {
 
 .action_btn {
   position: fixed;
-  bottom: 6rem;
+  bottom: 2rem;
   background: rgba(245, 245, 245, 0.8);
   border-radius: 50%;
 }
@@ -162,10 +162,9 @@ SVG {
   font-size: var(--fs_xl);
 }
 .nav_container .disclaimer {
-  display: block;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: 100%;
   font-size: var(--fs_n);
+  text-align: center;
   text-wrap: balance;
 }
 .nav_container .search_nav {
@@ -391,7 +390,7 @@ SVG {
   font-size: 1.2rem;
   width: 100%;
   z-index: 5;
-  /* display: none; */
+  display: none;
 }
 .my_banner .banner_content {
   margin: 0 auto;
